# collision_detection_homework

./: .gitignore  CMakeLists.txt  README.md  core.cu  core.cuh  dataGenerator.cpp  dataGenerator.h  dbg.cu  dbg.h  main.cu  render.cpp  render.h  rlights.h  scene.cpp  scene.h  utils.h
